--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -21,7 +21,7 @@
 						<div class="card-header msg_head">
 							<div class="d-flex bd-highlight">
 								<div class="img_cont">
-									<img src="{{ url_for('static', filename='logo.jpeg')}}" class="rounded-circle user_img">
+									<img src="{{ url_for('static', filename='logo.jpg')}}" class="rounded-circle user_img">
 									<span class="online_icon"></span>
 								</div>
 								<div class="user_info">
